[package]
name = "test-files"
version = "0.1.0"
edition = "2018"
description = "temporary file creation convenience library"
license = "MIT"
repository = "https://github.com/olidacombe/test-files"
keywords = ["test", "files", "temporary", "temp", "convenience"]

[dependencies]
tempdir = "0.3.7"
thiserror = "1.0.29"
touch = "0.0.1"

[dev-dependencies]
color-eyre = "0.5.11"
indoc = "1.0.3"