[package]
name = "test-files"
version = "0.1.2"
edition = "2018"
description = "temporary file creation convenience library"
license = "MIT"
repository = "https://github.com/olidacombe/test-files"
keywords = ["test", "files", "temporary", "temp", "convenience"]

[dependencies]
tempfile = "3.8.0"
thiserror = "1.0.29"
touch = "0.0.1"

[dev-dependencies]
color-eyre = "0.6.2"
indoc = "2.0.4"
